--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+templates/cancer_centers_filled.csv
+
+# local sqlite
+/data/
+*.sqlite
+*.sqlite-shm
+*.sqlite-wal
