--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "dev": "next dev --port 3002",
     "build": "next build",
     "start": "next start --port 3002",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:migrate": "node scripts/sqlite-migrate.mjs",
+    "admin:grant": "node scripts/grant-admin-user.mjs",
+    "db:audit-offices": "node scripts/sqlite-exec-file.mjs --file db/sql/audit_offices.sql",
+    "db:cleanup-offices": "node scripts/sqlite-exec-file.mjs --file db/sql/cleanup_offices.sql",
+    "csv:upload": "node scripts/upload-centers-csv.mjs",
+    "ops:health-check": "node scripts/check-api-health.mjs"
   },
   "dependencies": {
+    "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
